syntax = "proto3";

package com.road.yishi.proto.room;

message RoomListRspMsg {
  repeated int32 room = 1;
}
